# lab.programmazione

./: CMakeLists.txt  CmakeLists.txt  Collection.h  CollectionObserver.h  DeleteNoteStrategy.h  EditNoteStrategy.h  Editor.h  Note.h  Observer.h  README.md  Strategy.h  Subject.h  main  main.cpp
src/: Collection.h  CollectionObserver.h  Editor.h  ImportantCollection.h  Note.h  Observer.h  Subject.h  main  main.cpp
test/: CMakeLists.txt  CmakeLists.txt  testFile.cpp
